--- a/PereiraAlicia_Taller05.ipynb
+++ b/PereiraAlicia_Taller05.ipynb
@@ -9,7 +9,7 @@
    },
    "source": [
     "---\n",
-    "title: \"Métodos Numéricos - Taller 05 - Gauss'Jacobi y Gauss-Seidel\"\n",
+    "title: \"Métodos Numéricos - Taller 05 - Gauss-Jacobi y Gauss-Seidel\"\n",
     "author: \"Alicia Pereira\"\n",
     "date: \"January 25, 2025\"\n",
     "lang: es\n",
@@ -68,6 +68,13 @@
    "source": [
     "from src.iterative_methods import gauss_jacobi\n",
     "from src.iterative_methods import gauss_seidel"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Gauss-Jacobi y Gauss-Seidel"
    ]
   },
   {
